--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-masonry": "^2.6.0",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -41,6 +42,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
